# clipboard-manager

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  bindings.ts  context.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/clipboard_manager/: helpers.rs  mod.rs
src-tauri/src/events/: mod.rs
src/@/components/ui/: calendar.tsx  toggle-group.tsx
src/assets/: stylesheet.css
src/components/: CopyButton.tsx  DeleteButton.tsx  GenericCardItem.tsx  ImageCard.tsx  Separator.tsx
src/constants/: index.ts
src/events/: index.tsx
src/sections/: Aside.tsx  Main.tsx
src/sections/main/: RecentItems.tsx
src/utils/: index.ts
