[package]
name = "clippis"
version = "1.0.0"
description = "Another offline, cool looking, comfortable, clipboard manager."
authors = ["Julian Kominovic"]
license = ""
repository = "https://github.com/JulianKominovic/clipboard-manager"
default-run = "clippis"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "clipboard-all", "os-all", "shell-open", "app-all", "path-all", "protocol-asset", "fs-read-file", "fs-read-dir"] }
arboard = "3.3.0"
chrono = "0.4.31"
clipboard-master = "3.1.3"
homedir = "0.2.1"
once_cell = "1.19.0"
sled = "0.34.7"
bincode = "1.3.3"
tokio = { version = "1.35.1", features = ["full"] }
image = "0.24.7"
rayon = "1.8.0"
active-win-pos-rs = "0.8.3"
freedesktop-icons = "0.2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
